# NightScoutMongoBackup

./: .coverage  .env.example  .env.test  .env.vault  .eslintrc  .gitignore  .pre-commit-config.yaml  .swcrc  LICENSE  README  README.md  ecosystem.config.js  ecosystem.dev.config.js  ecosystem.prod.config.js  eslint.config.cjs  jest.config.cjs  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties  tsconfig.eslint.json  tsconfig.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: back-merge.yml  codeql-analysis.yml  delete-merged-branches.yml  deploy-linode.yml  linting-checks.yml  project-automation.yml  python-linting.yml  python-testing.yml  security-checks.yml  semgrep.yml  sonarcloud.yml  sonarqube-issues-to-github.yml  sync-main-to-develop.yml  testing.yml
backups/: .gitkeep
documents/: BOT_TESTING_GUIDE.md  CICD_OVERVIEW.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ACTIONS_DEPLOYMENT.md  GITHUB_ACTIONS_QUICKSTART.md  LINODE_QUICKSTART.md  README_PYTHON.md
scripts/: deploy_linode.sh  setup.sh
src/: index.ts
src/commands/admin/: backup-simple.ts  backup.ts
src/commands/general/: ping.ts  queryDb.ts
src/events/: commandExecuted.ts
src/lib/: setup.ts  utils.ts
src/lib/services/: backup-base.ts  backup-simple.ts  backup.ts  compression.ts  discordThread.ts  file.ts  mongo.ts  s3.ts
src/lib/util/: date.ts
src/listeners/backup/: backupEvents.ts
src/listeners/client/: clientReady.ts
src/listeners/database/: connectionError.ts
src/listeners/errors/: commandError.ts
src/nightscout_backup_bot/: __init__.py  __main__.py  bot.py  config.py  logging_config.py  main.py
src/nightscout_backup_bot/api/: __init__.py  main.py  server.py
src/nightscout_backup_bot/cogs/: __init__.py
src/nightscout_backup_bot/services/: __init__.py  backup_service.py  compression_service.py  discord_thread_service.py  file_service.py  mongo_service.py  s3_service.py
src/nightscout_backup_bot/utils/: checks.py  collection_name_helper.py  date_utils.py  pm2_process_manager.py
src/preconditions/: BackupChannelOnly.ts  BackupRateLimit.ts  GuildOnly.ts
src/scheduled-tasks/: nightlyBackup.ts
src/tests/: backup-simple.spec.ts  backup.spec.ts  chatInputCommandSuccess.spec.ts  commandExecuted.spec.ts  compressionService.spec.ts  connection.spec.ts  coverage.spec.ts  date.spec.ts  discordThreadService.spec.ts  example.spec.ts  example.test.ts  fileService.spec.ts  index.spec.ts  mongo.spec.ts  nightlyBackup.spec.ts  ping.spec.ts  queryDb.spec.ts  s3Service.integration.spec.ts  s3Service.spec.ts  sentry.spec.ts  utils.spec.ts
src/tests/__mocks__/: mockLogger.ts
src/tests/listeners/: backupEvents.spec.ts  clientReady.spec.ts  commandError.spec.ts  connectionError.spec.ts
src/tests/preconditions/: BackupChannelOnly.spec.ts  BackupRateLimit.spec.ts  GuildOnly.spec.ts
tests/: conftest.py
tests/integration/: test_bot_connection.py  test_s3_integration.py  test_site_ssh.py
tests/unit/: test_bot.py  test_config.py  test_main.py  test_mongo_service.py  test_purge_cog.py
tests/unit/api/: test_main.py  test_server.py
tests/unit/cogs/: __init__.py
typings/dotenv_vault/: __init__.pyi
(+36 files in other folders)
